enhacement: added get all roles feature
